--- a/src/index.css
+++ b/src/index.css
@@ -74,3 +74,39 @@ code {
         height: 100vh !important;
     }
 }
+
+::-webkit-scrollbar {
+
+    width: 8px;
+    
+    height: 8px;
+    
+    }
+    
+    /* Track */
+    
+    ::-webkit-scrollbar-track {
+    
+    background: #e1dee7;
+    
+    border-radius: 3px;
+    
+    }
+    
+    /* Handle */
+    
+    ::-webkit-scrollbar-thumb {
+    
+    background-color: #666666;
+    
+    border-radius: 3px;
+    
+    }
+    
+    /* Handle on hover */
+    
+    ::-webkit-scrollbar-thumb:hover {
+    
+    background: #555;
+    
+    }
